# Rust_Analysis_Code

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
2_Background/2.2_Syntax_Overview/: background_main.rs  main.rs  printing.rs  structs.rs  types.rs  variables.rs
procedural_macros/: Cargo.toml
src/: main.rs
src/2_Background/2_2_Syntax_Overview/: control_flow_loops.rs  references.rs
src/Chapter_2/: mod.rs
src/Chapter_2/Syntax_Overview/: functions.rs  types.rs
src/chapter_2/: mod.rs
src/chapter_2/syntax_overview/: background_main.rs  control_flow_loops.rs  functions.rs  printing.rs  references.rs  structs.rs  types.rs  variables.rs
src/chapter_2_tmp/syntax_overview/: variables.rs
src/chapter_3/: mod.rs
src/chapter_3/borrowing/: dangling_references.rs  function_calls.rs  function_calls_borrowing.rs  immutable_borrow.rs  immutable_borrows.rs  lifetimes.rs  mod.rs  mutable_borrows.rs
src/chapter_3/concurrency_errors/: arc_mutex.rs
src/chapter_3/cyclic_data_structures/: attempted_rust_trans.rs  cyclic_linked_list_c.c  cyclic_linked_list_rust.rs
src/chapter_3/ownership/: copy_types.rs  drop.rs  function_calls.rs  function_calls_ownership.rs  mod.rs  moving.rs
src/chapter_3/use-after-free_memory_leaks/: memory_leaks.cpp  use_after_free_cpp.cpp  use_after_free_rust.rs
src/chapter_4/declerative_macros/: clamp.c  clamp_c.c  clamp_cpp.cpp  clamp_rust.rs  debug_values.rs  debug_values_fn.rs  matrix.rs  min_cpp.cpp  min_rust.rs  pattern_matching.rs
src/chapter_4/procedural_macros/: generating_tests.rs  tests.rs
src/chapter_5/abstraction_flexibility/: generics.rs  traits.rs
src/chapter_5/comparison_oop/: composition.rs  cpp_reuse.cpp  dynamic_dispatch_cpp.cpp  dynamic_dispatch_rust.rs  inheritance.cpp  result_based.rs  rust_reuse.rs  static_dispatch.rs  try_catch.cpp
src/chapter_5/error_handling/: option.rs  result.rs  simplifying_propagation.rs
src/chapter_5/interfacing/: calling_dot_product.rs  dot_product.c  extern.rs  using_rust.c
