[package]
name = "rust_analysis_code"
version = "0.1.0"
edition = "2021"

[dependencies]


# chapter_2 -> syntax_overview code
[[bin]]
name = "control_flow_loops"
path = "src/chapter_2/syntax_overview/control_flow_loops.rs"

[[bin]]
name = "functions"
path = "src/chapter_2/syntax_overview/functions.rs"

[[bin]]
name = "printing"
path = "src/chapter_2/syntax_overview/printing.rs"

[[bin]]
name = "references"
path = "src/chapter_2/syntax_overview/references.rs"

[[bin]]
name = "structs"
path = "src/chapter_2/syntax_overview/structs.rs"

[[bin]]
name = "types"
path = "src/chapter_2/syntax_overview/types.rs"

[[bin]]
name = "variables"
path = "src/chapter_2/syntax_overview/variables.rs"


# chapter_3 -> borrowing code
[[bin]]
name = "immutable_borrows"
path = "src/chapter_3/borrowing/immutable_borrows.rs"

[[bin]]
name = "mutable_borrows"
path = "src/chapter_3/borrowing/mutable_borrows.rs"

[[bin]]
name = "dangling_references"
path = "src/chapter_3/borrowing/dangling_references.rs"

[[bin]]
name = "function_calls_borrowing"
path = "src/chapter_3/borrowing/function_calls_borrowing.rs"


# chapter_3 -> ownership code
[[bin]]
name = "moving"
path = "src/chapter_3/ownership/moving.rs"

[[bin]]
name = "copy_types"
path = "src/chapter_3/ownership/copy_types.rs"

[[bin]]
name = "drop"
path = "src/chapter_3/ownership/drop.rs"

[[bin]]
name = "function_calls_ownership"
path = "src/chapter_3/ownership/function_calls_ownership.rs"


# chapter_3 -> use-after-free and memory leak
[[bin]]
name = "use_after_free_rust"
path = "src/chapter_3/use-after-free_memory_leaks/use_after_free_rust.rs"


# chapter_3 -> concurrency errors
[[bin]]
name = "arc_mutex"
path = "src/chapter_3/concurrency_errors/arc_mutex.rs"


# chapter_3 -> cyclic data structures
[[bin]]
name = "attempted_rust_trans"
path = "src/chapter_3/cyclic_data_structures/attempted_rust_trans.rs"

[[bin]]
name = "cyclic_linked_list_rust"
path = "src/chapter_3/cyclic_data_structures/cyclic_linked_list_rust.rs"


# chapter_4 -> declerative macros
[[bin]]
name = "debug_values"
path = "src/chapter_4/declerative_macros/debug_values.rs"
